# NexusLang

./: CMakeLists.txt  LICENSE  pyproject.toml  run.py
nexus/: README.md  debug.nx
nexus/src/: main.cpp  nx.cpp
nexus/tests/: classes.nx.result  functions.nx  hello.nx  incdec.nx.result  limits.nx  limits.nx.result  loops.nx  loops.nx.result  operators.modulo.nx.result  operators.nx  operators.nx.result
src/: nx.hpp
src/interpreter/: ArrayType.hpp  Callable.hpp  Class.hpp  Environment.hpp  Function.hpp  Instance.cpp  Instance.hpp  Interpreter.cpp  Resolver.cpp  Resolver.hpp
src/nexus/: __main__.py  constants.py  errors.py  interpreter.py  lexer.py  nodes.py  parser.py  runtime.py  values.py
src/nexus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/parser/: Expr.hpp  IncludeRun.cpp  Parser.cpp  Stmt.cpp  (+2 more)
tests/: args.nx  args.nx.result  biblioteca.nx  bitwiseOperators.nx  bitwiseOperators.nx.result  bitwiseShift.nx  bitwiseShift.nx.result  classes.nx  errorString.nx  errorString.nx.error  functions.nx.result  hello.nx.result  incdec.nx  include.nx  operators.modulo.nx  run.bat  run.sh  test.glad  test_advanced_oop.glad  test_advanced_oop.nx  test_anonymous.glad  test_arg_error.glad  test_assignments.glad  test_attr_error.glad  test_bool.glad  test_calculator.glad  test_call_error.glad  test_casting.glad  test_chaining.glad  test_closures.glad  test_comprehension.glad  test_comprehensive.glad  test_destructuring.glad  test_dict.glad  test_final.glad  test_for_loop.glad  test_functions.glad  test_increment.glad  test_inherited_self.glad  test_input.glad  (+21 more)
(+23 files in other folders)
